routesrv/testdata/ing-v1-lb-target-multi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: namespace1
  name: ingress1
spec:
  rules:
  - host: test.example.org
    http:
      paths:
      - path: "/test1"
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              name: port1
---
apiVersion: v1
kind: Service
metadata:
  namespace: namespace1
  name: service1
spec:
  clusterIP: 1.2.3.4
  ports:
  - name: port1
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: namespace1
  name: service1
subsets:
- addresses:
  - ip: 42.0.1.2
  - ip: 42.0.1.3
  ports:
  - name: port1
    port: 8080
    protocol: TCP
